--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebotv5",
-  "version": "5.43.2",
+  "version": "5.43.2-beta1",
   "description": "Powerful all-in-one bot for Twitch streamers.",
   "main": "main.js",
   "scripts": {
