--- a/.github/workflows/build-draft-release.yml
+++ b/.github/workflows/build-draft-release.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Rebuild Robotjs for Electron
         if: steps.tagged.outputs.tagged == 1
-        run: node-gyp rebuild --silent --directory=node_modules/robotjs/ --runtime=electron --target=7.1.9 --arch=x64 --dist-url=https://atom.io/download/atom-shell
+        run: npm run rebuild
 
       - name: Decrypt Secrets.gpg
         if: steps.tagged.outputs.tagged == 1
