build workflow tweaks

--- a/.github/workflows/build-draft-release.yml
+++ b/.github/workflows/build-draft-release.yml
@@ -36,13 +36,13 @@ jobs:
         if: steps.tagged.outputs.tagged == 1
         uses: 'actions/setup-node@v1'
         with:
-          node-version: '14.x'
+          node-version: '10.x'
 
       - name: Build Prep for Windows
         if: steps.tagged.outputs.tagged == 1 && runner.os == 'windows'
         shell: bash
         run: |
-          npm config set msvs_version 2017
+          npm config set msvs_version 2019
           npm install --quiet --global --production windows-build-tools@4.0.0
 
       - name: Build Prep for Linux
@@ -81,7 +81,7 @@ jobs:
   release:
     name: Draft Release
     needs: build
-    runs-on: 'windows-latest'
+    runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout master branch
         uses: 'actions/checkout@v2'
