--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "rebuild": "node-gyp rebuild --directory=node_modules/robotjs/ --runtime=electron --target=12.2.2 --arch=x64 --dist-url=https://atom.io/download/atom-shell --abi=87 --force-process-config",
     "rebuild:new": "npm rebuild --runtime=electron --target=12.2.2 --disturl=https://atom.io/download/atom-shell --abi=87",
     "rebuild:darwin": "node-gyp rebuild --directory=node_modules/robotjs/ --runtime=electron --target=12.2.2 --arch=darwin --dist-url=https://atom.io/download/atom-shell",
-    "setup": "npm ci && npm rebuild && npm run rebuild"
+    "setup": "npm ci && npm rebuild && npm run rebuild",
+    "lint": "grunt lint"
   },
   "repository": "https://github.com/crowbartools/Firebot",
   "keywords": [
