--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "node-cache": "^4.2.1",
     "node-hue-api": "^4.0.10",
     "node-json-db": "^0.7.3",
+    "node-xlsx": "^0.20.0",
     "parse-link-header": "^1.0.1",
     "probe-image-size": "^5.0.0",
     "request": "^2.85.0",
