--- a/.github/workflows/build-draft-release.yml
+++ b/.github/workflows/build-draft-release.yml
@@ -13,7 +13,7 @@ jobs:
     name: Compile Bundles
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
+        os: [windows-2019, ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
