Use \n as default EOL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "[javascript]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+        "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+        "files.eol": "\n"
     },
     "editor.formatOnSave": true
 }
