Fix Elgato Key Lights, add Light Strip support

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@twurple/auth": "^5.0.9",
     "@twurple/chat": "^5.0.9",
     "@twurple/pubsub": "^5.0.9",
+    "@zunderscore/elgato-light-control": "^1.1.2",
     "angular": "^1.8.0",
     "angular-animate": "^1.7.8",
     "angular-aria": "^1.7.9",
@@ -70,6 +71,7 @@
     "carina": "^0.11.2",
     "cm-resize": "^1.0.1",
     "codemirror": "^5.59.1",
+    "color-convert": "^2.0.1",
     "compare-versions": "^3.5.1",
     "cors": "^2.8.5",
     "countup.js-angular1": "^1.0.0",
@@ -81,7 +83,6 @@
     "electron-oauth2": "^3.0.0",
     "electron-regedit": "^2.0.0",
     "electron-window-state": "^4.1.1",
-    "elgato-light-api": "^1.0.4",
     "empty-folder": "^2.0.2",
     "eventsource": "^1.0.7",
     "express": "^4.17.1",
