--- a/package.json
+++ b/package.json
@@ -24,48 +24,47 @@
     },
     "main": "./dist/index.js",
     "scripts": {
-        "start-main": "webpack --config ./configs/preload.webpack.js && webpack --config ./configs/main.webpack.js && electron ./dist/main.js",
-        "start": "cross-env START_HOT=1 NODE_ENV=development webpack-dev-server --config ./configs/render.dev.webpack.js"
+        "start:dev": "webpack build -c ./config/webpack/main.js && concurrently -k -s=first \"webpack serve -c ./config/webpack/renderer.js --hot\" \"electron ./build/main/index.js\"",
+        "start:prod": "webpack build -c ./config/webpack/all.js --node-env production && electron ./build/main/index.js"
     },
     "devDependencies": {
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "@types/node": "^16.11.1",
-        "@types/react": "^17.0.30",
-        "@types/react-dom": "^17.0.10",
-        "@types/react-router-dom": "^5.3.1",
+        "@types/react": "^17.0.43",
+        "@types/react-dom": "^17.0.14",
+        "@types/react-router-dom": "^5.3.3",
         "@types/uuid": "^8.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@typescript-eslint/parser": "^4.0.1",
-        "cross-env": "^7.0.2",
-        "css-loader": "^6.4.0",
-        "electron": "^15.3.0",
-        "electron-builder": "^22.13.1",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "autoprefixer": "^10.4.4",
+        "concurrently": "^7.1.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^3.4.1",
+        "electron": "^18.0.2",
+        "electron-builder": "^22.14.13",
         "electron-devtools-installer": "^3.2.0",
-        "eslint": "^7.8.1",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-jest": "^25.2.2",
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-jest": "^25.7.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.26.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.3.6",
-        "html-webpack-harddisk-plugin": "^2.0.0",
-        "html-webpack-plugin": "^5.4.0",
-        "image-webpack-loader": "^8.0.1",
-        "jest": "^27.3.1",
-        "postcss": "^8.3.10",
-        "postcss-loader": "^6.2.0",
+        "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint-webpack-plugin": "^3.1.1",
+        "fork-ts-checker-webpack-plugin": "^7.2.3",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^27.5.1",
+        "mini-css-extract-plugin": "^2.6.0",
+        "postcss": "^8.4.12",
+        "postcss-loader": "^6.2.1",
         "prettier": "^2.4.1",
-        "react-hot-loader": "^4.13.0",
-        "sass-loader": "^12.2.0",
-        "source-map-loader": "^3.0.0",
-        "style-loader": "^3.3.0",
-        "ts-loader": "^9.2.6",
+        "source-map-loader": "^3.0.1",
+        "tailwindcss": "^3.0.23",
+        "ts-loader": "^9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
-        "typescript": "^4.4.4",
-        "webpack": "^5.59.0",
+        "typescript": "^4.6.3",
+        "webpack": "^5.71.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.3.1",
-        "webpack-merge": "^5.8.0"
+        "webpack-dev-server": "^4.8.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -86,9 +85,10 @@
         "node-json-db": "^1.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-refresh": "^0.12.0",
+        "react-refresh-typescript": "^2.0.4",
         "react-router-dom": "^5.3.0",
         "sanitize-filename": "^1.6.3",
-        "tailwindcss": "^2.2.17",
         "tiny-typed-emitter": "^2.0.2",
         "uuid": "^8.3.0",
         "winston": "^3.3.3",
