fix all the globals

--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -10,5 +10,9 @@
             "SharedTypes/*": ["../shared/typings/*"]
         },
         "strictPropertyInitialization": false
-    }
+    },
+    "include":[
+        "../shared/typings/**/*.ts",
+        "main.ts"
+    ]
 }
