--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "prettier": "^2.4.1",
         "source-map-loader": "^3.0.1",
         "tailwindcss": "^3.0.23",
+        "terser-webpack-plugin": "^5.3.1",
         "ts-loader": "^9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.6.3",
