fix(deps): swapped elgato light api

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@twurple/auth": "^5.0.9",
     "@twurple/chat": "^5.0.9",
     "@twurple/pubsub": "^5.0.9",
+    "@zunderscore/elgato-light-control": "^1.1.2",
     "angular": "^1.8.0",
     "angular-animate": "^1.7.8",
     "angular-aria": "^1.7.9",
@@ -81,7 +82,6 @@
     "electron-oauth2": "^3.0.0",
     "electron-regedit": "^2.0.0",
     "electron-window-state": "^4.1.1",
-    "elgato-light-api": "^1.0.4",
     "empty-folder": "^2.0.2",
     "eventsource": "^1.0.7",
     "express": "^4.17.1",
