--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -5,6 +5,10 @@
         "lib": [
             "WebWorker"
         ],
+        "rootDirs": [
+            "../main",
+            "../shared"
+        ],
         "paths": {
             "SharedUtils": ["../shared/util/index.ts"],
             "SharedTypes/*": ["../shared/typings/*"]
@@ -12,7 +16,8 @@
         "strictPropertyInitialization": false
     },
     "include":[
-        "../shared/typings/**/*.ts",
-        "main.ts"
-    ]
+        "../shared/typings/**/*",
+        "../main/**/*"
+    ],
+    "exclude": ["../../node_modules/**/*"],
 }
