--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "firebotv5",
   "version": "5.53.2",
   "description": "Powerful all-in-one bot for Twitch streamers.",
+  "main": "/build/main.js",
   "scripts": {
     "build": "tsc",
     "clean": "rimraf build/",
