--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "The Streaming Community",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/express": "^4.17.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "copyfiles": "^2.4.1",
