work on app layout

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "postcss-loader": "^6.2.1",
         "prettier": "^2.4.1",
         "source-map-loader": "^3.0.1",
-        "tailwindcss": "^3.0.23",
+        "tailwindcss": "^3.1.8",
         "terser-webpack-plugin": "^5.3.1",
         "ts-loader": "^9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
@@ -79,10 +79,12 @@
         "@fortawesome/react-fontawesome": "^0.1.11",
         "@headlessui/react": "^1.4.1",
         "@heroicons/react": "^1.0.4",
+        "@mdi/js": "^7.0.96",
+        "@mdi/react": "^1.6.1",
         "@tailwindcss/forms": "^0.3.4",
         "clsx": "^1.1.1",
         "electron-window-state": "^5.0.3",
-        "framer-motion": "^4.1.17",
+        "framer-motion": "^6.5.0",
         "fs-extra": "^9.0.1",
         "mobx": "^6.3.5",
         "mobx-react": "^7.2.1",
@@ -93,6 +95,7 @@
         "react-refresh": "^0.12.0",
         "react-refresh-typescript": "^2.0.4",
         "react-router-dom": "^5.3.0",
+        "react-use": "^17.4.0",
         "sanitize-filename": "^1.6.3",
         "tiny-typed-emitter": "^2.0.2",
         "uuid": "^8.3.0",
