--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "node-gyp": "^8.4.1",
     "node-sass": "^4.14.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.26.0",
+    "@crowbartools/firebot-custom-scripts-types": "^5.53.2-6",
     "@twurple/api": "^5.2.1",
     "@twurple/auth": "^5.2.1",
     "@twurple/chat": "^5.2.1",
@@ -113,6 +114,7 @@
     "node-hue-api": "^4.0.11",
     "node-json-db": "^1.4.1",
     "node-xlsx": "^0.20.0",
+    "obs-websocket-js": "^5.0.0",
     "parse-link-header": "^1.0.1",
     "probe-image-size": "^5.0.0",
     "request": "^2.85.0",
@@ -123,6 +125,7 @@
     "sanitize-filename": "^1.6.3",
     "simple-oauth2": "^3.4.0",
     "socket.io-client": "^2.3.0",
+    "tiny-typed-emitter": "^2.1.0",
     "ui-select": "^0.19.8",
     "underscore": "^1.13.1",
     "unzipper": "^0.9.15",
