--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
       "module": "CommonJS",
       "noImplicitAny": false,
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "sourceMap": true,
       "outDir": "build",
+      "allowJs": true,
       "baseUrl": ".",
       "rootDir": "./src",
       "moduleResolution": "node",
