finish implementation of currency update event

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "downlevelIteration": true,
       "paths": {
         "*": ["node_modules/*"]
-      }
+      },
+      "target": "ES2020"
     },
     "include": [
       "src/**/*",
