--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebotv5",
-  "version": "5.54.0-beta",
+  "version": "5.54.0",
   "description": "Powerful all-in-one bot for Twitch streamers.",
   "main": "build/main.js",
   "scripts": {
