--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "author": "The Streaming Community",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/dompurify": "^2.3.4",
     "@types/express": "^4.17.1",
+    "@types/marked": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "copyfiles": "^2.4.1",
@@ -84,7 +86,7 @@
     "countup.js-angular1": "^1.0.0",
     "custom-electron-titlebar": "^4.1.0",
     "deepmerge": "^4.2.2",
-    "dompurify": "^2.2.2",
+    "dompurify": "^2.4.0",
     "ejs": "^2.7.1",
     "electron-gh-releases": "^2.0.4",
     "electron-oauth2": "^3.0.0",
@@ -103,7 +105,7 @@
     "kbm-robot": "https://github.com/Skriglitz/kbm-robot/tarball/master",
     "list.js": "^1.5.0",
     "m3u8stream": "^0.2.2",
-    "marked": "^0.7.0",
+    "marked": "^4.1.0",
     "mathjs": "^7.5.1",
     "moment": "^2.24.0",
     "nedb": "^1.8.0",
