--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "cors": "^2.8.5",
     "countup.js-angular1": "^1.0.0",
     "cron": "^2.1.0",
+    "cronstrue": "^2.21.0",
     "custom-electron-titlebar": "^4.1.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.2.2",
