--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "author": "The Streaming Community",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.1",
+    "@types/luxon": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "copyfiles": "^2.4.1",
@@ -82,6 +84,8 @@
     "compare-versions": "^3.5.1",
     "cors": "^2.8.5",
     "countup.js-angular1": "^1.0.0",
+    "cron": "^2.1.0",
+    "cronstrue": "^2.21.0",
     "custom-electron-titlebar": "^4.1.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.2.2",
@@ -102,6 +106,7 @@
     "js-convert-case": "^4.1.1",
     "kbm-robot": "https://github.com/Skriglitz/kbm-robot/tarball/master",
     "list.js": "^1.5.0",
+    "luxon": "^3.1.1",
     "m3u8stream": "^0.2.2",
     "marked": "^0.7.0",
     "mathjs": "^7.5.1",
