--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
   "dependencies": {
     "@aws-sdk/client-polly": "^3.26.0",
     "@crowbartools/firebot-custom-scripts-types": "^5.53.2-6",
-    "@twurple/api": "^5.3.3",
-    "@twurple/auth": "^5.3.3",
-    "@twurple/chat": "^5.3.3",
-    "@twurple/pubsub": "^5.3.3",
+    "@twurple/api": "^6.0.0-pre.3",
+    "@twurple/auth": "^6.0.0-pre.3",
+    "@twurple/chat": "file:../twurple/packages/chat",
+    "@twurple/pubsub": "^6.0.0-pre.3",
     "@zunderscore/elgato-light-control": "^1.1.2",
     "angular": "^1.8.0",
     "angular-animate": "^1.7.8",
