--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,60 @@
-node_modules/
-build/
-dist/
+# General ignores
+pids
+*.pid
+*.seed
+*.pid.lock
+logs
+*.log
+
+# OS Ignores: Windows
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# OS Ignores: iOS/Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# OS Ignores: Linux
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# Node-specific ignores
+.eslintcache
+.npm
+npm-debug.log*
+node_modules
+
+# Repo Specific
+.next
+.turbo
+coverage
+build
+dist
+out
+secrets.json
