--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/parser": "^5.51.0",
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
+        "prettier": "^2.8.4",
         "typescript": "^4.9.5"
     },
     "engines": {
