--- a/apps/firebot-website/package.json
+++ b/apps/firebot-website/package.json
@@ -2,5 +2,13 @@
     "name": "firebot-website",
     "version": "1.0.0",
     "author": "CrowbarTools",
-    "license": "GPL-3.0"
+    "license": "GPL-3.0",
+    "scripts": {
+        "lint": "eslint --fix --ext .ts,.tsx src/**"
+    },
+    "devDependencies": {
+        "@types/node": "^18.13.0",
+        "eslint-config-custom": "*",
+        "tsconfig": "*"
+    }
 }
