--- a/apps/firebot-frontend/package.json
+++ b/apps/firebot-frontend/package.json
@@ -3,10 +3,11 @@
     "private": "true",
     "version": "6.0.0",
     "license": "GPL-3.0",
+    "scripts": {
+        "lint": "eslint --fix --ext .ts,.tsx src/**"
+    },
     "devDependencies": {
         "eslint-config-custom": "*",
         "tsconfig": "*"
-    },
-    "dependencies": {
     }
 }
