chore: config typescript

--- a/apps/firebot-frontend/tsconfig.json
+++ b/apps/firebot-frontend/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "extends": "tsconfig/base.json",
-    "include": ["**/*.ts", "**/*.tsx"],
+    "compilerOptions": {
+        "lib": ["DOM", "ES2020"]
+    },
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
     "exclude": ["node_modules"]
 }
