--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "eslint": "7.32.0",
         "eslint-config-custom": "*",
         "prettier": "^2.8.4",
+        "turbo": "^1.7.4",
         "typescript": "^4.9.5"
     },
     "engines": {
