--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,13 +1,26 @@
 {
-    "name": "firebot-frontend",
-    "private": "true",
-    "version": "6.0.0",
-    "license": "GPL-3.0",
-    "scripts": {
-        "lint": "eslint --fix --ext .ts,.tsx src/**"
-    },
-    "devDependencies": {
-        "eslint-config-custom": "*",
-        "tsconfig": "*"
-    }
+  "name": "firebot-frontend",
+  "private": "true",
+  "version": "6.0.0",
+  "license": "GPL-3.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "devDependencies": {
+    "@next/font": "13.1.6",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.34.0",
+    "eslint-config-custom": "*",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tsconfig": "*",
+    "typescript": "4.9.5"
+  }
 }
