--- a/.gitignore
+++ b/.gitignore
@@ -47,11 +47,40 @@ Temporary Items
 # Node-specific ignores
 .eslintcache
 .npm
-npm-debug.log*
 node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # Repo Specific
 .next
+next-env.d.ts
 .turbo
 coverage
 build
