--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,13 +14,11 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.34.0",
     "eslint-config-custom": "*",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tsconfig": "*",
-    "typescript": "4.9.5"
+    "tsconfig": "*"
   }
 }
