--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "@typescript-eslint/parser": "^5.51.0",
-        "eslint": "7.32.0",
+        "eslint": "^8.34.0",
         "eslint-config-custom": "*",
         "prettier": "^2.8.4",
         "turbo": "^1.7.4",
