chore: move deps to global package.json

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@types/node": "^18.13.0",
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "@typescript-eslint/parser": "^5.51.0",
         "eslint": "^8.34.0",
         "eslint-config-custom": "*",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.8.4",
         "turbo": "^1.7.4",
         "typescript": "^4.9.5"
