--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,17 +19,16 @@
     "lint": "eslint --fix --ext .ts,.tsx src/**"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^9.3.8",
+    "@nestjs/core": "^9.3.8",
+    "@nestjs/platform-fastify": "^9.3.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.8",
     "@types/jest": "29.2.4",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.11",
@@ -43,12 +42,12 @@
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "tsc-watch": "^6.0.0",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
+    "tsc-watch": "^6.0.0",
     "tsconfig": "*",
+    "tsconfig-paths": "4.1.1",
     "typescript": "^4.9.5"
   },
   "jest": {
