--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@types/jest": "29.2.4",
         "@types/node": "^18.13.0",
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "@typescript-eslint/parser": "^5.51.0",
@@ -13,7 +14,9 @@
         "eslint-config-custom": "*",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "jest": "29.3.1",
         "prettier": "^2.8.4",
+        "ts-jest": "29.0.3",
         "turbo": "^1.7.4",
         "typescript": "^4.9.5"
     },
