--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,9 +26,8 @@
     "@nestjs/testing": "^9.3.8",
     "@types/supertest": "^2.0.11",
     "eslint-config-custom": "*",
-    "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "tsconfig-paths": "4.1.1",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "tsconfig-paths": "4.1.1"
   }
 }
