--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,11 +14,15 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "eslint-config-custom": "*",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "postcss": "^8.4.21",
+    "prettier-plugin-tailwind": "^2.2.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.6",
     "tsconfig": "*"
   }
 }
